fix layout bugs

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -308,30 +308,42 @@ height:100%;
 .vid-info .acronym { display: none; }
 }
 
+.content-container {
+    position: relative;
+    height:100%;
+    margin:auto;
+  }
+
 #d-content {
     top: 5%;
     color: #fff;
+    display: inline-block;
+    margin: 0 auto;
 }
-.description-content { position: absolute; top: 100%; left: 0%; width: 100%;height:175%; background: rgba(240,240,240,1); color: #000; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.description-content { position: absolute; top:100%; width: 100%; height:175%; background: rgba(240,240,240,1); color: #000; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .description-content h1 {font-size: 2.5rem; font-weight: 500; margin-top: 2%; line-height: 1.2; margin-left:7.5%;}
-.description-content p {font-size: 2rem; font-weight: 500; margin-top: 2%; line-height: 1.2; margin-left:10%;margin-right:10%;}
-.description-content ol {font-size: 2rem; font-weight: 500; margin-top: 2%; line-height: 1.2; margin-left:10%;margin-right:10%;}
+.description-content p {font-size: 2rem; font-weight: 500; margin-top: 5%; line-height: 1.2; margin-left:10%;margin-right:10%;}
+.description-content ol {font-size: 2rem; font-weight: 500; margin-top: 5%; line-height: 1.2; margin-left:10%;margin-right:10%;}
 
 #p-content {
-    top: 5%;
+    top: 5% auto;
     color: #fff;
+    display: inline-block;
+    margin: 0 auto;
 }
 
-.partners-content { position: absolute; top: 275%; left: 0%; width: 100%; height:200%; background: rgba(255,255,255,1); color: #000; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.partners-content { position: absolute; top: 275%; width: 100%; height:200%; background: rgba(255,255,255,1); color: #000; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .partners-content h1 {font-size: 3rem; font-weight: 700; margin-top: 2%; line-height: 1.2; text-align: center;}
 .partners-content p {font-size: 2rem; font-weight: 500; margin-top: 5%; line-height: 1.5; text-align: center;}
 
 #f-content {
     top: 5%;
     color: #fff;
+    display: inline-block;
+    margin: 0 auto;
 }
 
-.footer-content { position: absolute; top: 475%; left: 0%; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.footer-content { position: absolute; top:475%; left: 0%; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .footer-content h1 {font-size: 3rem; font-weight: 700; margin-top: 2%; line-height: 1.2; margin-left:7.5%;}
 .footer-content p {font-size: 1.25rem; font-weight: 100; vertical-align: center;}
 
@@ -340,7 +352,7 @@ height:100%;
     color: #fff;
 }
 
-.mfooter-content { position: absolute; top: 0%; left: 0%; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.mfooter-content { position: relative; left: 0%; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .mfooter-content h1 {font-size: 3rem; font-weight: 700; margin-top: 2%; line-height: 1.2; margin-left:7.5%;}
 .mfooter-content p {font-size: 1.25rem; font-weight: 100; vertical-align: center;}
 
@@ -352,7 +364,7 @@ height:100%;
 
 .ceo-content {position: absolute; top: 8%; left: 0%; width: 100%; height: 105%; background: rgba(240,240,240,1); color: #000; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .ceo-content h1 {font-size: 3rem; font-weight: 700; margin-top: 2%; line-height: 1.2; margin-left:7.5%;}
-.ceo-content p {font-size: 2rem; font-weight: 400; margin-top: 14%; line-height: 1.2; margin-left:10%; margin-right: 10%}
+.ceo-content p {font-size: 2rem; font-weight: 400; margin-top: 5%; line-height: 1.2; margin-left:10%; margin-right: 10%}
 .ceo-img {position: absolute; margin-top: 2%; margin-left: 5%; width:75%;}
 
 #rd-bar {
@@ -372,7 +384,7 @@ height:100%;
     color: #fff;
 }
 
-.rdfooter-content { position: absolute; top: 250%; left: 0%; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.rdfooter-content { position: absolute; top: 275%; left: 0%; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .rdfooter-content h1 {font-size: 3rem; font-weight: 700; margin-top: 2%; line-height: 1.2; margin-left:7.5%;}
 .rdfooter-content p {font-size: 1.25rem; font-weight: 100; vertical-align: center;}
 
@@ -456,6 +468,6 @@ height:100%;
     color: #fff;
 }
 
-.tfooter-content { position: absolute; top: 135%; left: 0%; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.tfooter-content { position: absolute; float: bottom; width: 100%; height: 10%; background: rgba(25,25,25,1); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .tfooter-content h1 {font-size: 3rem; font-weight: 700; margin-top: 2%; line-height: 1.2; margin-left:7.5%;}
 .tfooter-content p {font-size: 1.25rem; font-weight: 100; vertical-align: center;}
